# pymc-demos

./: .gitignore  README.md
intro-overview/: 01-intro-overview-pymc.ipynb  ggplot_minimal_style.py  pyproject.toml
model-building-and-expansion-golf-putting/: demo.ipynb  pyproject.toml
