[project]
name = "intro-overview"
version = "0.1.0"
description = ""
authors = [
    {name = "alexlabuda",email = "alexlabuda@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.8"
dependencies = [
    "numpy>=1.26.4",
    "pytensor>=2.22.1",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "arviz>=0.18.0",
    "pymc>=5.15.1",
    "ipywidgets>=8.1.6",
    "graphviz>=0.20.3"
]

[tool.poetry]
packages = [{include = "intro_overview", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
